test/trivial/vass/warning-with-bool.good
warning-with-bool.chpl:2: error: arguments to compilerWarning() and compilerError(), except for the optional depth argument, must be cast to string
