test/trivial/vass/warning-with-bool.chpl

compilerWarning("hasField 1 ", false);
compilerWarning("hasField 2 ", "actually ", true);
compilerWarning("either way ", "is fine");
writeln("hi");
